--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
                   <a class="navbar-brand text-light" href="#" style="font-weight: 700; font-size: 2rem;">Sumaiya.</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto gap-2">
                       <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
@@ -49,6 +50,7 @@
                         </a>
                       </li>
                     </ul>
+                    </div>
                 </div>
               </nav>
         </header>
