--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12 text-center mt-3 py-5">
-                     <h1 style=" font-weight: 300;">Home <span style="color: rgb(215, 178, 248); font-size: 2.5rem;"> / About</span></h1>
+                     <h1 style=" font-weight: 300;">Home <span 
+                       style="color: rgb(125, 69, 174); font-size: 2.4rem;"> / About</span></h1>
                     </div>
                   </div>
                     </div>
@@ -84,7 +85,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 mb-4">
                       <img src="image/truck.svg" alt="">
                       <div class="img-content my-3">
                         <h5>Fast & Free Shipping</h5>
@@ -127,16 +128,16 @@
                 </div>
               </div>
               <div class="row py-5">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                  <img src="image/person_1.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                  <img src="image/person_2.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                 <img src="image/person_3.jpg" alt="" class="img-fluid">
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 mb-4">
                 <img src="image/person_4.jpg" alt="" class="img-fluid">
               </div>
               </div>
@@ -144,25 +145,25 @@
 
               <!-- ====================section-person-details================= -->
               <div class="row person-details">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <h2>Lawson Arnold</h2>
                   <span>CEO, Founder, Atty.</span>
                   <p class="mt-4">Separated they live in. Separated they live in Bookmarksgrove right at the coast of the semantics, a large language ocean.</p>
                   <a class="text-dark" href="">Learn More</a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <h2>Jeremy Walker</h2>
                   <span>CEO, Founder, Atty.</span>
                   <p class="mt-4">Separated they live in. Separated they live in Bookmarksgrove right at the coast of the semantics, a large language ocean.</p>
                   <a class="text-dark" href="">Learn More</a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <h2>Patrik White</h2>
                   <span>CEO, Founder, Atty.</span>
                   <p class="mt-4">Separated they live in. Separated they live in Bookmarksgrove right at the coast of the semantics, a large language ocean.</p>
                   <a class="text-dark" href="">Learn More</a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <h2>Kathryn Ryan</h2>
                   <span>CEO, Founder, Atty.</span>
                   <p class="mt-4">Separated they live in. Separated they live in Bookmarksgrove right at the coast of the semantics, a large language ocean.</p>
@@ -231,7 +232,7 @@
              <!-- =================section-footer================= -->
             <div class="container section-footer py-5">
               <div class="row">
-                <div class="col-md-6 mt-3">
+                <div class="col-md-6 mt-3 mb-4">
                   <a href=""> <i class="far fa-envelope"></i> Subscribe to Newsletter </a>
                   <div class="row mt-3">
                     <div class="col-5"> <input type="text" class="form-control" placeholder="Enter Your Name"></div>
@@ -239,15 +240,15 @@
                     <div class="col-2"><a class="btn text-light px-4" href="" style="background-color: #3b5d50;"><i class="fab fa-telegram-plane"></i></a></div>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4">
                   <img src="image/sofa.png" alt="" style="height: 170px; width: 200px; float: right;">
                 </div>
               </div>
               <h1 style="color: #3b5d50;">Sumaiya.</h1>
               <div class="row footer-2">
-                <div class="col-md-6">
+                <div class="col-md-4 mb-4">
                   <div class="row">
-                    <div class="col-8">
+                    <div class="col-12">
                       <p class="my-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum molestiae ab totam quibusdam doloremque porro nihil 
                         non natus, iure perferendis dolorem maiores labore eius suscipit!</p>
                         <div class="icon-footer my-5">
@@ -257,7 +258,11 @@
                            <a href=""><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
-                    <div class="col-4">
+                    </div>
+                    </div>
+                    <div class="col-md-8">
+                      <div class="row mb-4">
+                        <div class="col-3">
                       <ul>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Services</a></li>
@@ -265,18 +270,14 @@
                         <li><a href="">Contact Us</a></li>
                       </ul>
                     </div>
+                  <div class="col-3">
+                    <ul>
+                      <li><a href="">Support</a></li>
+                      <li><a href="">Knowledge base</a></li>
+                      <li><a href="">Live chat</a></li>
+                    </ul>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="row">
-                    <div class="col-4">
-                      <ul>
-                        <li><a href="">Support</a></li>
-                        <li><a href="">Knowledge base</a></li>
-                        <li><a href="">Live chat</a></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
+                    <div class="col-3">
                       <ul>
                         <li><a href="">Jobs</a></li>
                         <li><a href="">Our team</a></li>
@@ -284,7 +285,7 @@
                         <li><a href="">Privacy policy</a></li>
                       </ul>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                       <ul>
                         <li><a href="">Nordic Chair</a></li>
                         <li><a href="">Kruzo Aero</a></li>
@@ -295,11 +296,11 @@
                 </div>
               </div>
               <hr>
-              <div class="row">
-                <div class="col-md-8">
+              <div class="row my-4">
+                <div class="col-md-8 mb-4">
                   <p>Copyright &copy; 2024. All Rights Reserved -- Designed with love by <span class="text-dark">Sumaiya</span></p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                   <div class="condition" style="float: right;">
                     <a class="me-5" href="">Terms & Conditions</a>
                     <a href="">Privacy Policy</a>
